--- a/index.html
+++ b/index.html
@@ -164,6 +164,82 @@
                 </select>
               </form>
             </div>
+            <div class="personalized_card">
+              <h3>Our open action items</h3>
+              <div class="line_card"></div>
+              <div class="line_bottom_p"><p>47%</p></div>
+              <div class="line_bottom">
+                <div class="line_bottom_green"></div>
+              </div>
+              <div class="personalized_card_info">
+                <div class="card_info_1">
+                  <p>Kick Off meeting</p>
+                  <div class="ci1_line">
+                    <div class="line_circle">
+                      <div class="custom-radio">
+                        <label>
+                          <input type="radio" name="choice" value="option1" />
+                          <div class="line_line"></div>
+                        </label>
+                        <label>
+                          <input type="radio" name="choice" value="option2" />
+                          <div class="line_line"></div>
+                        </label>
+                        <label>
+                          <input type="radio" name="choice" value="option3" />
+                          <div class="line_line"></div>
+                        </label>
+                        <label>
+                          <input type="radio" name="choice" value="option3" />
+                          <div class="line_line"></div>
+                        </label>
+                        <label>
+                          <input type="radio" name="choice" value="option3" />
+                          <div class="line_line"></div>
+                        </label>
+                        <label>
+                          <input type="radio" name="choice" value="option3" />
+                          <div class="line_line"></div>
+                        </label>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="card_info_1">
+                  <p>Kick Off meeting</p>
+                  <div class="ci1_line">
+                    <div class="line_circle">
+                      <div class="custom-radio">
+                        <label>
+                          <input type="radio" name="choice" value="option1" />
+                          <div class="line_line"></div>
+                        </label>
+                        <label>
+                          <input type="radio" name="choice" value="option2" />
+                          <div class="line_line"></div>
+                        </label>
+                        <label>
+                          <input type="radio" name="choice" value="option3" />
+                          <div class="line_line"></div>
+                        </label>
+                        <label>
+                          <input type="radio" name="choice" value="option3" />
+                          <div class="line_line"></div>
+                        </label>
+                        <label>
+                          <input type="radio" name="choice" value="option3" />
+                          <div class="line_line"></div>
+                        </label>
+                        <label>
+                          <input type="radio" name="choice" value="option3" />
+                          <div class="line_line"></div>
+                        </label>
+                      </div>
+                    </div>
+                  </div>
+                </div
+              </div>
+            </div>
           </div>
         </div>
       </div>
