--- a/test.html
+++ b/test.html
@@ -1,47 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <style>
+
+    </style>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Select Example</title>
-    <style>
-      /* Select uslubi */
-      select {
-        padding: 10px;
-        font-size: 14px;
-        border: 2px solid #ccc;
-        border-radius: 5px;
-        outline: none;
-        transition: border-color 0.3s ease;
-        margin-bottom: 20px;
-        background-color: #f9f9f9; /* Yengil fon rangi */
-      }
-
-      /* Select hover yoki focus qilganda */
-      select:hover,
-      select:focus {
-        border-color: #793cfb; /* Fokusda chegara rangi o'zgaradi */
-      }
-
-      /* Submit tugmasi uslubi */
-      button {
-        padding: 10px;
-        font-size: 16px;
-        color: white;
-        background-color: #793cfb;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        transition: background-color 0.3s ease;
-      }
-
-      /* Submit tugmasiga hover qilganda */
-      button:hover {
-        background-color: #5e29cc; /* Hover qilganda tugma rangi o'zgaradi */
-      }
-    </style>
+    <title>Document</title>
   </head>
   <body>
+    <
     
   </body>
 </html>
