--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
     <section id="personalized">
       <div class="container personalized">
         <h1>Personalized hub for every user</h1>
+
         <div class="personalized_boxs">
           <div class="mini_box_perso">
             <div class="personalized_mini_box">
@@ -178,27 +179,51 @@
                     <div class="line_circle">
                       <div class="custom-radio">
                         <label>
-                          <input type="radio" name="choice" value="option1" />
+                          <input
+                            type="checkbox"
+                            name="choice"
+                            value="option1"
+                          />
                           <div class="line_line"></div>
                         </label>
                         <label>
-                          <input type="radio" name="choice" value="option2" />
+                          <input
+                            type="checkbox"
+                            name="choice"
+                            value="option2"
+                          />
                           <div class="line_line"></div>
                         </label>
                         <label>
-                          <input type="radio" name="choice" value="option3" />
+                          <input
+                            type="checkbox"
+                            name="choice"
+                            value="option3"
+                          />
                           <div class="line_line"></div>
                         </label>
                         <label>
-                          <input type="radio" name="choice" value="option3" />
+                          <input
+                            type="checkbox"
+                            name="choice"
+                            value="option3"
+                          />
                           <div class="line_line"></div>
                         </label>
                         <label>
-                          <input type="radio" name="choice" value="option3" />
+                          <input
+                            type="checkbox"
+                            name="choice"
+                            value="option3"
+                          />
                           <div class="line_line"></div>
                         </label>
                         <label>
-                          <input type="radio" name="choice" value="option3" />
+                          <input
+                            type="checkbox"
+                            name="choice"
+                            value="option3"
+                          />
                           <div class="line_line"></div>
                         </label>
                       </div>
@@ -211,27 +236,51 @@
                     <div class="line_circle">
                       <div class="custom-radio">
                         <label>
-                          <input type="radio" name="choice" value="option1" />
+                          <input
+                            type="checkbox"
+                            name="choice"
+                            value="option1"
+                          />
                           <div class="line_line"></div>
                         </label>
                         <label>
-                          <input type="radio" name="choice" value="option2" />
+                          <input
+                            type="checkbox"
+                            name="choice"
+                            value="option2"
+                          />
                           <div class="line_line"></div>
                         </label>
                         <label>
-                          <input type="radio" name="choice" value="option3" />
+                          <input
+                            type="checkbox"
+                            name="choice"
+                            value="option3"
+                          />
                           <div class="line_line"></div>
                         </label>
                         <label>
-                          <input type="radio" name="choice" value="option3" />
+                          <input
+                            type="checkbox"
+                            name="choice"
+                            value="option3"
+                          />
                           <div class="line_line"></div>
                         </label>
                         <label>
-                          <input type="radio" name="choice" value="option3" />
+                          <input
+                            type="checkbox"
+                            name="choice"
+                            value="option3"
+                          />
                           <div class="line_line"></div>
                         </label>
                         <label>
-                          <input type="radio" name="choice" value="option3" />
+                          <input
+                            type="checkbox"
+                            name="choice"
+                            value="option3"
+                          />
                           <div class="line_line"></div>
                         </label>
                       </div>
@@ -239,7 +288,75 @@
                   </div>
                 </div>
               </div>
+              <div class="personalized_box2_card_info">
+                <h3>How close are we to hitting our KPIs?</h3>
+                <div class="box2_card_info_line"></div>
+                <div class="box2_ci">
+                  <div class="box2_card_info_number"><p>$15.750</p></div>
+                  <div class="box2_card_info_line_of_number"></div>
+                  <div class="box2_card_info_number"><p>$15.750</p></div>
+                </div>
+                <img src="./images/Group.png" alt="" />
+              </div>
             </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="logo_section">
+      <div class="container logo_section">
+        <h1>
+          Top <span> customer-obsessed </span>teams have already built their
+          customer hub kingdoms with <span>EverAfter</span>
+        </h1>
+        <div class="logo_section_logos">
+          <div class="first_logos_ls">
+            <img src="./images/vector1.png" alt="" />
+            <img src="./images/vector2.png" alt="" />
+            <img src="./images/vector3.png" alt="" />
+          </div>
+          <div class="twice_logos_ls">
+            <img src="./images/vector4.png" alt="" />
+            <img src="./images/vector5.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="customers_section">
+      <div class="container customers_section">
+        <div class="customers_bird"></div>
+        <h1>The first Customer</h1>
+        <h2>Collaboration <span>Platform</span>.</h2>
+        <div class="customers_back_image">
+          <div class="customers_back_2"></div>
+        </div>
+        <div class="customers_boxs">
+          <div class="customer_box">
+            <h3>PERSONALIZE</h3>
+            <div class="customer_img">
+              <div class="c_images">
+                <img class="c_girl1" src="./images/girl1.png" alt="" />
+                <img class="c_man1" src="./images/man2.png" alt="" />
+                <img class="c_man2" src="./images/man3.png" alt="" />
+              </div>
+              <h4>Champion</h4>
+              <div class="customer_line"></div>
+              <h5>HEAD OF SALES</h5>
+              <h5>SAN FRANCISCO</h5>
+              <h5>30Y-45Y</h5>
+            </div>
+            <div class="customer_comment">
+              <p>
+                Create beautiful and personalized customer hubs with
+                drag-and-drop, customer-centric widgets for task management,
+                KPIs, timelines, shared assets, support tickets and more!
+              </p>
+            </div>
+          </div>
+          <div class="customer_box_2">
+            <h3>AUTOMATE</h3>
           </div>
         </div>
       </div>
