new sections added

--- a/index.html
+++ b/index.html
@@ -355,9 +355,174 @@
               </p>
             </div>
           </div>
-          <div class="customer_box_2">
-            <h3>AUTOMATE</h3>
+          <div class="customer_box move1">
+            <h3>PERSONALIZE</h3>
+            <div class="customer_img">
+              <div class="c_images">
+                <img class="c_girl1" src="./images/girl1.png" alt="" />
+                <img class="c_man1" src="./images/man2.png" alt="" />
+                <img class="c_man2" src="./images/man3.png" alt="" />
+              </div>
+              <h4>Champion</h4>
+              <div class="customer_line"></div>
+              <h5>HEAD OF SALES</h5>
+              <h5>SAN FRANCISCO</h5>
+              <h5>30Y-45Y</h5>
+            </div>
+            <div class="customer_comment">
+              <p>
+                Create beautiful and personalized customer hubs with
+                drag-and-drop, customer-centric widgets for task management,
+                KPIs, timelines, shared assets, support tickets and more!
+              </p>
+            </div>
           </div>
+          <div class="customer_box move2">
+            <h3>PERSONALIZE</h3>
+            <div class="customer_img">
+              <div class="c_images">
+                <img class="c_girl1" src="./images/girl1.png" alt="" />
+                <img class="c_man1" src="./images/man2.png" alt="" />
+                <img class="c_man2" src="./images/man3.png" alt="" />
+              </div>
+              <h4>Champion</h4>
+              <div class="customer_line"></div>
+              <h5>HEAD OF SALES</h5>
+              <h5>SAN FRANCISCO</h5>
+              <h5>30Y-45Y</h5>
+            </div>
+            <div class="customer_comment">
+              <p>
+                Create beautiful and personalized customer hubs with
+                drag-and-drop, customer-centric widgets for task management,
+                KPIs, timelines, shared assets, support tickets and more!
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="customers_section2">
+      <div class="container customers_section2">
+        <div class="back_image_2"></div>
+        <h1>
+          <span> A customer success manager's</span> work usually starts when
+          most fairy tales end.
+        </h1>
+        <p>
+          Taking care of the customers happily ever after. Here at EverAfter we
+          empower customer success teams to do just that. Our secret sauce is
+          our smart widget-based hubs that allow you to design personalized
+          workspace for each user type, at every stage of the life-cycle. No
+          code needed.
+        </p>
+      </div>
+    </section>
+
+    <section id="unlock_sectoin">
+      <div class="container unlock_sectoin">
+        <div class="unlock_image"></div>
+
+        <div class="unlock_df">
+          <div class="unlock_card">
+            <div class="unlock_image_2"></div>
+            <div class="unlock_card_div">
+              <p class="uncd_c">WELCOME BACK JULIA!</p>
+              <div class="unlock_card_div_info">
+                <h4>Our open action items</h4>
+                <div class="art_lines">
+                  <div class="art_line_circle"></div>
+                  <div class="art_line_line"></div>
+                  <div class="art_line_circle_in_circle">
+                    <div class="in_circle"></div>
+                  </div>
+                  <div class="art_line_line none_color"></div>
+                  <div class="art_line_circle c_none_color"></div>
+                </div>
+                <div class="unlock_lines_informations">
+                  <div class="unlock_lines_info">
+                    <p>Integration</p>
+                    <p>Kick Off Meeting</p>
+                    <div class="unlock_line_line_2"></div>
+                  </div>
+                  <div class="unlock_lines_info">
+                    <div class="unlock_line_line_2 ull2"></div>
+                  </div>
+                  <div class="unlock_lines_info">
+                    <p>Meeting</p>
+                    <div class="unlock_line_line_2"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="unlock_info ui_2_unlock">
+            <span>/01</span>
+            <h2>Unlock <span>a superior customer success experience.</span></h2>
+            <p>
+              EverAfter offers a self-service workspace that's fully
+              white-labeled, customized, and can either be embedded in your
+              product or shared through a private link. Give your CSMs more
+              control over the customer experience.
+            </p>
+            <div class="h_btn">
+              <button>Sign up</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="unlock_sectoin_2">
+      <div class="container unlock_sectoin_2">
+        <div class="unlock_section_2_info">
+          <span>/02</span>
+          <h1>
+            Let your CRM data flow into your hub
+            <span> so your customers can stay on top of everything.</span>
+          </h1>
+          <p>
+            It takes FOREVER to bring together content to share with customers.
+            The power of EverAfter begins when you connect it to the tools you
+            already have. You choose what to show every customer. Show their own
+            KPIs taken from Salesforce, support tickets pulled from Zendesk,
+            upcoming training meetings taken from your calendar, and so much
+            more!
+          </p>
+          <div class="h_btn">
+            <button>Sign up</button>
+          </div>
+        </div>
+        <div class="unlock_section_2_image">
+          <img src="./images/shar.png" alt="" />
+        </div>
+      </div>
+    </section>
+
+    <section id="statistic_section">
+      <div class="container statistic_section">
+        <div class="statistic_boxs">
+          <div class="statistic_box_img">
+            <img src="./images/rasm1.png" alt="" />
+          </div>
+          <div class="statistic_box_info">
+            <h3>
+              “EverAfter is the next step in high touch customer relationships
+              management. Finally, a place to nurture real connections with
+              customers”
+            </h3>
+            <p>Ziv Peled, <span>Chief Customer Officer, AppsFlyer</span></p>
+          </div>
+        </div>
+
+        <div class="statistic_cards">
+            <div class="statistic_card">
+               
+            </div>
+            <div class="statistic_card_information">
+
+            </div>
         </div>
       </div>
     </section>
