added new sections

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
     <!-- GOOGLE FONTS -->
     <link
       rel="stylesheet"
@@ -515,14 +522,192 @@
             <p>Ziv Peled, <span>Chief Customer Officer, AppsFlyer</span></p>
           </div>
         </div>
-
+        <div class="statistic_card_backimage"></div>
         <div class="statistic_cards">
-            <div class="statistic_card">
-               
+          <div class="statistic_card">
+            <div class="sc_b_image">
+              <img src="./images/rasm2.png" alt="" />
             </div>
-            <div class="statistic_card_information">
+            <div class="card_boxs">
+              <p class="card_boxs_p">WELCOME BACK JULIA</p>
+              <div class="card_in">
+                <p>Usage Report</p>
+                <div class="lines_grey">
+                  <div class="line_grey"></div>
+                  <div class="line_grey"></div>
+                  <div class="line_grey"></div>
+                  <div class="line_grey"></div>
+                </div>
+                <div class="diogramma_statistic">
+                  <div class="diogramma_statistic1">
+                    <div class="diogramma_statistic1_1"></div>
+                  </div>
+                  <div class="diogramma_statistic2">
+                    <div class="diogramma_statistic1_2"></div>
+                  </div>
+                  <div class="diogramma_statistic3">
+                    <div class="diogramma_statistic1_3"></div>
+                  </div>
+                  <div class="diogramma_statistic4">
+                    <div class="diogramma_statistic1_4"></div>
+                  </div>
+                  <div class="diogramma_statistic5">
+                    <div class="diogramma_statistic1_5"></div>
+                  </div>
+                  <div class="diogramma_statistic6">
+                    <div class="diogramma_statistic1_6"></div>
+                  </div>
+                  <div class="diogramma_statistic7">
+                    <div class="diogramma_statistic1_7"></div>
+                  </div>
+                </div>
+                <div class="card_in_lines">
+                  <div class="card_in_line"></div>
+                  <div class="card_in_line"></div>
+                  <div class="card_in_line"></div>
+                  <div class="card_in_line"></div>
+                  <div class="card_in_line"></div>
+                  <div class="card_in_line"></div>
+                  <div class="card_in_line"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="statistic_card_information">
+            <span>/03</span>
+            <h2>
+              Run your onboarding
+              <span
+                >and ongoing customer programs with the ultimate customer
+                collaboration tool</span
+              >
+            </h2>
+            <p>
+              Forget all about using an external tool to project-manage your
+              customers success plans. Use EverAfter's prebuilt widgets to
+              collaborate on timelines, KPIs, tasks, meeting agendas, and
+              everything else.
+            </p>
+            <div class="h_btn">
+              <button>Sign up</button>
+            </div>
+          </div>
+        </div>
 
+        <div class="statistic_section_last">
+          <div class="statistic_section_last_mac">
+            <div class="statistic_section_last_information">
+              <span>/04</span>
+              <h2>Getting started <span>is easy</span>.</h2>
+              <p>
+                No more set-up headaches. EverAfter lets you turn customer
+                success playbooks into beautiful hubs that you can deploy at
+                scale.
+              </p>
+              <div class="h_btn">
+                <button>Sign up</button>
+              </div>
             </div>
+            <div style="margin-top: 170px" class="personalized_big_box">
+              <div class="personalized_head">
+                <div class="head_colors">
+                  <div class="color_red"></div>
+                  <div class="color_yellow"></div>
+                  <div class="color_green"></div>
+                </div>
+                <div class="head_arrows">
+                  <i class="fa-solid fa-arrow-left"></i>
+                  <i class="fa-solid fa-retweet"></i>
+                  <i class="fa-solid fa-arrow-right"></i>
+                </div>
+                <div class="big_box_search"><p>yoursite.com</p></div>
+                <div class="big_box_plus"><i class="fa-solid fa-plus"></i></div>
+              </div>
+              <div class="your_hub">
+                <h3>Start building your hub</h3>
+                <div class="your_hub_bos">
+                  <div class="your_hub_box">
+                    <i class="fa-brands fa-telegram hw"></i>
+                    <p>
+                      Customer <br />
+                      onboarding plan
+                    </p>
+                    <div class="lines_hub_box">
+                      <div class="line_hub_box1"></div>
+                      <div class="line_hub_box2"></div>
+                      <div class="line_hub_box3"></div>
+                    </div>
+                    <div class="lines_hub_box">
+                      <div class="line_hub_box4"></div>
+                      <div class="line_hub_box5"></div>
+                      <div class="line_hub_box6"></div>
+                    </div>
+                    <div class="tipa_btn">
+                      <div class="btn_line"></div>
+                    </div>
+                  </div>
+                  <div class="your_hub_box">
+                    <i class="fa-brands fa-telegram hw"></i>
+                    <p>
+                      Customer <br />
+                      onboarding plan
+                    </p>
+                    <div class="lines_hub_box">
+                      <div class="line_hub_box1"></div>
+                      <div class="line_hub_box2"></div>
+                      <div class="line_hub_box3"></div>
+                    </div>
+                    <div class="lines_hub_box">
+                      <div class="line_hub_box4"></div>
+                      <div class="line_hub_box5"></div>
+                      <div class="line_hub_box6"></div>
+                    </div>
+                    <div class="tipa_btn">
+                      <div class="btn_line"></div>
+                    </div>
+                  </div>
+                  <div class="your_hub_box">
+                    <i class="fa-brands fa-telegram hw"></i>
+                    <p>
+                      Customer <br />
+                      onboarding plan
+                    </p>
+                    <div class="lines_hub_box">
+                      <div class="line_hub_box1"></div>
+                      <div class="line_hub_box2"></div>
+                      <div class="line_hub_box3"></div>
+                    </div>
+                    <div class="lines_hub_box">
+                      <div class="line_hub_box4"></div>
+                      <div class="line_hub_box5"></div>
+                      <div class="line_hub_box6"></div>
+                    </div>
+                    <div class="tipa_btn">
+                      <div class="btn_line"></div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="mac_image_back"></div>
+              <div class="rasm5"></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="present_section">
+      <div class="container present_section">
+        <h1>Present valuable data coming from <span> your tech stack</span></h1>
+        <img src="./images/rasm6.png" alt="" />
+        <div class="present_cards">
+          <p>Zendesk Widget</p>
+          <div class="present_card">
+            <h4>Support Tickets Status</h4>
+            <div class="card_table">
+              
+            </div>
+          </div>
         </div>
       </div>
     </section>
