--- a/index.html
+++ b/index.html
@@ -701,15 +701,193 @@
         <h1>Present valuable data coming from <span> your tech stack</span></h1>
         <img src="./images/rasm6.png" alt="" />
         <div class="present_cards">
-          <p>Zendesk Widget</p>
+          <div class="present_card_p">
+            <p>Zendesk Widget</p>
+          </div>
           <div class="present_card">
             <h4>Support Tickets Status</h4>
-            <div class="card_table">
-              
+            <div class="card_tables">
+              <div class="row header-row">
+                <div class="cell">Created Date</div>
+                <div class="cell">Subject</div>
+                <div class="cell">Description</div>
+                <div class="cell">Priority</div>
+                <div class="cell">Status</div>
+              </div>
+
+              <div class="row row-1">
+                <div class="cell">
+                  <div class="cell_line"></div>
+                </div>
+                <div class="cell card_table">
+                  <div class="cell_line"></div>
+                  <div class="cell_line_in_line"></div>
+                </div>
+                <div class="cell">
+                  <div class="cell_2_divjon">
+                    <div class="cell_2_divjon_kichik"></div>
+                    <div class="cell_2_divjon_middle"></div>
+                    <div class="cell_2_divjon_big"></div>
+                  </div>
+                  <div class="cell_2_divjon">
+                    <div class="cell_2_divjon_middle"></div>
+                    <div class="cell_2_divjon_kichik"></div>
+                    <div class="cell_2_divjon_big"></div>
+                  </div>
+                </div>
+                <div class="cell"><span class="priority green"></span></div>
+                <div class="cell">
+                  <div class="cell_line"></div>
+                </div>
+              </div>
+
+              <div class="row row-2">
+                <div class="cell">
+                  <div class="cell_line"></div>
+                </div>
+                <div class="cell card_table">
+                  <div class="cell_line"></div>
+                  <div class="cell_line_in_line"></div>
+                </div>
+                <div class="cell">
+                  <div class="cell_2_divjon">
+                    <div class="cell_2_divjon_kichik"></div>
+                    <div class="cell_2_divjon_middle"></div>
+                    <div class="cell_2_divjon_big"></div>
+                  </div>
+                  <div class="cell_2_divjon">
+                    <div class="cell_2_divjon_middle"></div>
+                    <div class="cell_2_divjon_kichik"></div>
+                    <div class="cell_2_divjon_big"></div>
+                  </div>
+                </div>
+                <div class="cell">
+                  <span class="priority yellow"></span>
+                </div>
+                <div class="cell">
+                  <div class="cell_line"></div>
+                </div>
+              </div>
+
+              <div class="row last-row">
+                <div class="cell">
+                  <div class="cell_line"></div>
+                </div>
+                <div class="cell card_table">
+                  <div class="cell_line"></div>
+                  <div class="cell_line_in_line"></div>
+                </div>
+                <div class="cell">
+                  <div class="cell_2_divjon">
+                    <div class="cell_2_divjon_kichik"></div>
+                    <div class="cell_2_divjon_middle"></div>
+                    <div class="cell_2_divjon_big"></div>
+                  </div>
+                  <div class="cell_2_divjon">
+                    <div class="cell_2_divjon_middle"></div>
+                    <div class="cell_2_divjon_kichik"></div>
+                    <div class="cell_2_divjon_big"></div>
+                  </div>
+                </div>
+                <div class="cell">
+                  <span class="priority pink"></span>
+                </div>
+                <div class="cell">
+                  <div class="cell_line"></div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </section>
+
+    <section id="youtube">
+      <div class="container youtube">
+        <h1>How Verbit built a game-changing customer hub with EverAfter</h1>
+        <iframe
+          class="youtube_iframe"
+          width="774px"
+          height="444px"
+          src="https://www.youtube.com/embed/s391ypqz1B0?si=d-z-i7tvAOhLV6Gb"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+        <h2>Ready for your happily <span>EverAfter?</span></h2>
+        <div class="youtube_back_image"></div>
+        <form>
+          <input type="email" placeholder="Enter your email..." />
+          <div class="h_btn">
+            <button>Get Started</button>
+          </div>
+        </form>
+      </div>
+    </section>
+
+    <footer id="footer">
+      <div class="container footer">
+        <div class="footer_tables">
+          <div class="footer_logo">
+            <a href="./index.html">
+              <img src="./images/rasm8.png" alt="" />
+            </a>
+          </div>
+          <div class="footer_table">
+            <div class="footer_product">
+              <ul class="footer_navigations">
+                <li class="footer_nav last_style">PRODUCT</li>
+                <li class="footer_nav">
+                  <a href="#">Our Technology</a>
+                </li>
+                <li class="footer_nav">
+                  <a href="#">Customer Success Software</a>
+                </li>
+                <li class="footer_nav">
+                  <a href="#">Partner Management Software</a>
+                </li>
+                <li class="footer_nav">
+                  <a href="#">Pricing</a>
+                </li>
+              </ul>
+            </div>
+            <div class="footer_learn">
+              <ul class="footer_navigations">
+                <li class="footer_nav last_style">LEARN</li>
+                <li class="footer_nav">
+                  <a href="#">Guides & eBooks</a>
+                </li>
+                <li class="footer_nav">
+                  <a href="#">Blog</a>
+                </li>
+              </ul>
+            </div>
+            <div class="footer_company">
+              <ul class="footer_navigations">
+                <li class="footer_nav last_style">COMPANY</li>
+                <li class="footer_nav">
+                  <a href="#">Security</a>
+                </li>
+                <li class="footer_nav">
+                  <a href="#">About</a>
+                </li>
+                <li class="footer_nav">
+                  <a href="#">Terms & Conditions</a>
+                </li>
+                <li class="footer_nav">
+                  <a href="#">Privacy</a>
+                </li>
+                <li class="footer_nav">
+                  <a href="#">Careers</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <p>@ 2021 EverAfter LTD, All right reserved.</p>
+      </div>
+    </footer>
   </body>
 </html>
